--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
         hr {
             margin-bottom: 25px;
         }
+
+        @media screen and (max-width: 600px) {
+            h1 {
+                font-size: 3rem;
+            }
+        }
+
+        @media screen and (max-width: 400px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            hr {
+                margin-bottom: 15px;
+            }
+
+            body {
+                font-size: 0.8rem;
+            }
+        }
     </style>
 </head>
 <body>
