--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <div>
-        <h1>COMMONERS</h1>
+        <h1>COMMONERS</h1><sup>v0.0.0</sup>
         <hr>
         <span><a href="https://brainsatplay.com" target="_blank">Team</a> | <a href="https://github.com/thecommoners" target="_blank">Github</a></span> | <a href="mailto:garrettmflynn@gmail.com" target="_blank">Contact</a></span>
     </div>
