Update organization name on Github

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div>
         <h1>COMMONERS</h1><sup>v0.0.0</sup>
         <hr>
-        <span><a href="https://brainsatplay.com" target="_blank">Team</a> | <a href="https://github.com/thecommoners" target="_blank">Github</a></span> | <a href="mailto:garrettmflynn@gmail.com" target="_blank">Contact</a></span>
+        <span><a href="https://brainsatplay.com" target="_blank">Team</a> | <a href="https://github.com/commonersdev" target="_blank">Github</a></span> | <a href="mailto:garrettmflynn@gmail.com" target="_blank">Contact</a></span>
     </div>
 </body>
 </html>
